--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@babel/core": "^7.23.7",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.11.0",
-    "process": "^0.11.10"
+    "postcss": "^8.4.38",
+    "process": "^0.11.10",
+    "tailwindcss": "^3.4.3"
   },
   "dependencies": {
     "react": "^18.2.0",
