--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.7",
+    "@testing-library/react": "^15.0.2",
     "babel-plugin-transform-remove-console": "^6.9.4",
     "parcel": "^2.11.0",
     "postcss": "^8.4.38",
